Add the ability to set a different active range on a disc + one little typo fix

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -3,6 +3,9 @@
 # The distance from which music discs can be heard in blocks.
 music-disc-distance: 16
 
+# The max distance from which music discs can be heard in blocks.
+music-disc-max-distance: 256
+
 # The master volume of music discs from 0-1. (You can set values like 0.5 for 50% volume).
 music-disc-volume: 1
 
@@ -13,4 +16,5 @@ max-download-size: 50
 help:
   - "&8-[&6CustomDiscs Help Page&8]-"
   - "&aAuthor&7: &6Navoei"
+  - "&aContributors&7: &6alfw / &6Athar42"
   - "&fGit&0Hub&7: &9&ohttps://github.com/Navoei/CustomDiscs"
