--- a/gradle.properties
+++ b/gradle.properties
@@ -11,6 +11,6 @@ mod_id=customdiscsplugin
 # Target an older API to make it compatible with older versions of Simple Voice Chat
 voicechat_api_version=2.5.0
 
-plugin_version=3.0
+plugin_version=3.0.1b
 maven_group=me.Navoei.customdiscsplugin
 archives_base_name=custom-discs
